<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/expplore"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/Explore" />
    <item
        android:id="@+id/netOfNets"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/netofnets" />
    <item
        android:id="@+id/activity"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/Activity" />

    <item
        android:id="@+id/postajob"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/postajob" />

</menu>