<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_marginHorizontal="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_margin="10dp"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_gravity="center"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/white_drawble"
                android:padding="15dp"
                app:srcCompat="@drawable/ic_briefcase" />

            <TextView
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/findajob" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/black_background"
                android:padding="15dp"
                app:srcCompat="@drawable/ic_shape" />

            <TextView
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:padding="5dp"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_others" />
        </LinearLayout>
        <LinearLayout
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:background="@drawable/white_drawble"
                android:padding="15dp"
                app:srcCompat="@drawable/ic_group" />

            <TextView
                android:layout_gravity="center"
                android:padding="5dp"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/findCandidates" />
        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>